# django_corals_shop_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  mixins.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py
cart/: cart.py  serializers.py  urls.py  views.py
core/: env.example  settings.py  urls.py
coupons/: models.py  serializers.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_active.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_coupon_order_discount.py
products/: admin.py  models.py  recommender.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_slug.py  0002_comment_dislikes_number_comment_likes_number.py
